add: most orders list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,41 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.no-scrollbar::-webkit-scrollbar { 
+  display: none; 
+} 
+
+.triangle-element {
+  rotate: 135deg;
+  background: conic-gradient(at 50% 50%,transparent 135deg,#8DBC3F 0,#8DBC3F 225deg, transparent 0);
+}
+
+.stack-top {
+  /* adjust the below to control the shape */
+  --d:5px; 
+  --w:100px;
+  --c:#fba325;
+  /**/
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(29.29%, -100%) rotate(45deg); /* 29.29% = 100%*(1 - cos(45deg)) */
+  color: #fff;
+  text-align: center;
+  width: var(--w);
+  transform-origin: bottom left;
+  padding:5px 0 calc(var(--d) + 5px);
+  background:
+    linear-gradient(rgba(0,0,0,0.6) 0 0) bottom/100% var(--d) no-repeat
+    var(--c);
+  clip-path:polygon(0 100%,0 calc(100% - var(--d)),50% calc(100% - var(--d) - var(--w)/2),100% calc(100% - var(--d)),100% 100%,calc(100% - var(--d)) calc(100% - var(--d)), var(--d) calc(100% - var(--d)))
+}
+
+.stack-top.left {
+  left:0;
+  right:auto;
+  transform: translate(-29.29%, -100%) rotate(-45deg);
+  transform-origin: bottom right;
+}
